--- a/_config.yml
+++ b/_config.yml
@@ -13,18 +13,19 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Onassis
-author: Author
-email: email@gmail.com
+title: Egoic
+author: Dion Snoeijen
+email: hallo@dionsnoeijen.nl
 description: >- # this means to ignore newlines until "baseurl:"
   This is the description of my site. For all intents and purposes, it's complete.
-baseurl: "/Onassis" # the subpath of your site, e.g. /blog
-google_analytics: 'UA-131540516-1' # change this to your GA key
+baseurl: "" # the subpath of your site, e.g. /blog
+google_analytics: 'analytics_key' # change this to your GA key
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 include: ["_pages"]
 collections_dir: _collections
 twitter_username: jekyllrb
 github_username:  jekyll
+timezone: Europe/Amsterdam
 
 # Build settings
 markdown: kramdown
@@ -44,11 +45,5 @@ plugins:
 #   - vendor/ruby/
 
 collections:
-  articles:
-    output: true
-  letters:
-    output: true
-  speeches:
-    output: true
-  tutorials:
+  artikelen:
     output: true
